cluster/apps/core/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: longhorn.kng.house
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
    - host: "longhorn.kng.house"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
                service:
                  name: longhorn-frontend
                  port:
                    number: 80
  tls:
    - hosts:
        - longhorn.kng.house
      secretName: longhorn-tls
